--- a/src/index.html
+++ b/src/index.html
@@ -283,6 +283,10 @@
 
     <!-- crypto search section ends -->
 
+    <a href="https://www.producthunt.com/posts/yay-crypto-stock?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-yay&#0045;crypto&#0045;stock" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=396190&theme=light" alt="Yay&#0045;Crypto&#0045;Stock - An&#0032;App&#0032;you&#0032;can&#0032;invest&#0032;in&#0032;both&#0032;crypto&#0039;s&#0032;and&#0032;stocks | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a>
+
+    
+
 
     <!-- about section starts -->
 
